put in wrong repository initially

--- a/PyTorch_Workflow.ipynb
+++ b/PyTorch_Workflow.ipynb
@@ -107,7 +107,7 @@
         },
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 405
+          "height": 385
         },
         "id": "84c79a4512ece685",
         "outputId": "52f3586b-f92d-4a52-d552-e24ad65eca21"
@@ -363,7 +363,7 @@
         },
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 480
+          "height": 641
         },
         "id": "c3e8cebe659c7d89",
         "outputId": "858e52f1-a116-4f35-ee30-2706d16fd272"
@@ -1124,7 +1124,7 @@
         },
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 480
+          "height": 641
         },
         "id": "f7387ad93d5e1659",
         "outputId": "a71d6d97-7e30-48f9-ffdf-f02ab27eeceb"
@@ -1402,7 +1402,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 480
+          "height": 641
         },
         "id": "b60f0b6bb6042f54",
         "outputId": "41ff57ba-453e-48f9-f788-8ea7b1feefa3"
@@ -2020,7 +2020,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 480
+          "height": 641
         },
         "id": "qKr7zMZaHWAP",
         "outputId": "3afeb714-fc54-4377-99d8-8e4c4feada95"
@@ -2829,7 +2829,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 480
+          "height": 641
         },
         "id": "Lrt57r_tx1Jg",
         "outputId": "2be936a7-96f4-4fbb-931a-ebfba32f2e65"
@@ -3039,6 +3039,7 @@
         "# Training loop\n",
         "\n",
         "torch.manual_seed(42)\n",
+        "# I just used 300 epochs for show, you don't need so many\n",
         "epochs = 300\n",
         "\n",
         "# Put data on target device\n",
@@ -3066,7 +3067,7 @@
         "        test_loss = loss_fn(test_pred, y_test)\n",
         "\n",
         "# Print out what is happening\n",
-        "    if epoch % 10 == 0:\n",
+        "    if epoch % 30 == 0:\n",
         "        print(f'\\nEpoch: {epoch} | Loss: {loss} | Test Loss: {test_loss}')\n"
       ],
       "metadata": {
@@ -3074,75 +3075,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XJM4RZve2O-d",
-        "outputId": "46a8810c-d65f-4b3e-c8fb-4a87446cb79d"
+        "outputId": "0149cc08-c4ac-4b08-8f26-2a01ed4fc0aa"
       },
       "id": "XJM4RZve2O-d",
-      "execution_count": 52,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Epoch: 0 | Loss: 0.5551779866218567 | Test Loss: 0.5739762187004089\n",
+            "Epoch: 0 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
-            "Epoch: 10 | Loss: 0.439968079328537 | Test Loss: 0.4392664134502411\n",
+            "Epoch: 30 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
-            "Epoch: 20 | Loss: 0.3247582018375397 | Test Loss: 0.30455657839775085\n",
+            "Epoch: 60 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
-            "Epoch: 30 | Loss: 0.20954833924770355 | Test Loss: 0.16984669864177704\n",
-            "\n",
-            "Epoch: 40 | Loss: 0.09433845430612564 | Test Loss: 0.03513690456748009\n",
-            "\n",
-            "Epoch: 50 | Loss: 0.023886388167738914 | Test Loss: 0.04784907028079033\n",
-            "\n",
-            "Epoch: 60 | Loss: 0.019956795498728752 | Test Loss: 0.045803118497133255\n",
-            "\n",
-            "Epoch: 70 | Loss: 0.016517987474799156 | Test Loss: 0.037530567497015\n",
-            "\n",
-            "Epoch: 80 | Loss: 0.013089174404740334 | Test Loss: 0.02994490973651409\n",
-            "\n",
-            "Epoch: 90 | Loss: 0.009653178043663502 | Test Loss: 0.02167237363755703\n",
-            "\n",
-            "Epoch: 100 | Loss: 0.006215683650225401 | Test Loss: 0.014086711220443249\n",
-            "\n",
-            "Epoch: 110 | Loss: 0.00278724217787385 | Test Loss: 0.005814164876937866\n",
+            "Epoch: 90 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
             "Epoch: 120 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
-            "Epoch: 130 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 140 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
             "Epoch: 150 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 160 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 170 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
             "Epoch: 180 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
-            "Epoch: 190 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 200 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
             "Epoch: 210 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 220 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 230 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
             "Epoch: 240 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
             "\n",
-            "Epoch: 250 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 260 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 270 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 280 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
-            "\n",
-            "Epoch: 290 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n"
+            "Epoch: 270 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n"
           ]
         }
       ]
@@ -3157,10 +3118,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bMxJORC63SLU",
-        "outputId": "2f0e2742-18cc-41bd-87fb-963456bc3bd6"
+        "outputId": "e0f2c1e9-4962-426a-e077-15ddefc44383"
       },
       "id": "bMxJORC63SLU",
-      "execution_count": 53,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3171,7 +3132,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 68
         }
       ]
     },
@@ -3185,10 +3146,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "66worBUJ4JLr",
-        "outputId": "56d4006e-7572-4a08-ff05-eb6f4b673ef5"
+        "outputId": "072a3a01-11c0-4354-8993-a75ab766ff15"
       },
       "id": "66worBUJ4JLr",
-      "execution_count": 54,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3198,7 +3159,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 69
         }
       ]
     },
@@ -3229,10 +3190,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NbwU6spm4VJv",
-        "outputId": "18fcdd0f-3406-4480-9483-aa84b09ede6b"
+        "outputId": "9817b655-a012-4f93-8322-a8fd8b840eb6"
       },
       "id": "NbwU6spm4VJv",
-      "execution_count": 55,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3251,7 +3212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 70
         }
       ]
     },
@@ -3273,13 +3234,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 480
+          "height": 641
         },
         "id": "kv4LBCssAmYr",
-        "outputId": "062f0886-c31c-4a84-abc1-3a9db8b4a7e5"
+        "outputId": "ec31a359-12dc-4d52-c60a-aa5129ac9098"
       },
       "id": "kv4LBCssAmYr",
-      "execution_count": 56,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3338,10 +3299,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0dHW1SwbBKo1",
-        "outputId": "2fc022d4-a2e4-4ebc-b487-f4309ab635df"
+        "outputId": "baa0b755-1d8d-4e3b-b1fa-1202b857ad3a"
       },
       "id": "0dHW1SwbBKo1",
-      "execution_count": 57,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -3362,10 +3323,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bYiK5CqjGd9U",
-        "outputId": "e7cefec0-c578-44dc-8df7-74022c145aa1"
+        "outputId": "211f8f2c-4640-47be-c662-5e121121f636"
       },
       "id": "bYiK5CqjGd9U",
-      "execution_count": 60,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3376,7 +3337,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 73
         }
       ]
     },
@@ -3406,16 +3367,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AQjxYyTZEzbi",
-        "outputId": "175f0f57-3fe2-47c5-fe95-b8250aa59e4c"
+        "outputId": "a798a70d-1f8c-429b-8db7-32b29b591afa"
       },
       "id": "AQjxYyTZEzbi",
-      "execution_count": 61,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-61-1fcecca16bc3>:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "<ipython-input-74-1fcecca16bc3>:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
             "  loaded_model_1.load_state_dict(torch.load(f=MODEL_SAVE_PATH))\n"
           ]
         },
@@ -3429,7 +3390,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 74
         }
       ]
     },
@@ -3444,17 +3405,121 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p3Abu68uIhZO",
-        "outputId": "14ae57a9-e720-4c8d-a193-7574102621b7"
+        "outputId": "a9e1b2d2-c996-4833-f375-4b4ae439f9ce"
       },
       "id": "p3Abu68uIhZO",
-      "execution_count": 62,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next(loaded_model_1.parameters()).device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vKAX0dB9Ftks",
+        "outputId": "3541c798-c319-4751-e2fc-1c7192fdc638"
+      },
+      "id": "vKAX0dB9Ftks",
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda', index=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate loaded model\n",
+        "loaded_model_1.eval()\n",
+        "with torch.inference_mode():\n",
+        "    loaded_model_1_preds = loaded_model_1(X_test)\n",
+        "\n",
+        "loaded_model_preds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s8z0kKyOKKwO",
+        "outputId": "e83180c9-959a-4752-8b1a-dd8358674a99"
+      },
+      "id": "s8z0kKyOKKwO",
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.8600],\n",
+              "        [0.8739],\n",
+              "        [0.8878],\n",
+              "        [0.9018],\n",
+              "        [0.9157],\n",
+              "        [0.9296],\n",
+              "        [0.9436],\n",
+              "        [0.9575],\n",
+              "        [0.9714],\n",
+              "        [0.9854]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred == loaded_model_1_preds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XijqhE0qKg8K",
+        "outputId": "57623656-b985-46aa-d95c-777aa2fd677c"
+      },
+      "id": "XijqhE0qKg8K",
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
         }
       ]
     },
@@ -3462,10 +3527,10 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "vKAX0dB9Ftks"
+        "id": "9y7zhe0wKy4Y"
       },
-      "id": "vKAX0dB9Ftks",
-      "execution_count": null,
+      "id": "9y7zhe0wKy4Y",
+      "execution_count": 78,
       "outputs": []
     }
   ],
