--- a/Copy_of_PyTorch_Classification.ipynb
+++ b/Copy_of_PyTorch_Classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyMwUWr98IRx6iR1x7yu+pul",
+      "authorship_tag": "ABX9TyP5bs7xVNgojkPSWKxxk29A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1646,10 +1646,265 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Still room for improvement"
+        "## Test setups that may work\n",
+        "\n",
+        "### Increase Model Capacity\n",
+        "* To handle the non-linear separability of the `make_circles` dataset and potential outlier effects from unscaled data, add more hidden units and layers:"
       ],
       "metadata": {
-        "id": "nFq-aBETgN2-"
+        "id": "7091z7U5yD0h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Approach Overview**\n",
+        "In this part of ther project, we're trying to get better results than we have previously. We train a binary classification neural network on the `make_circles` dataset, without scaling the features. The network is designed to handle the dataset's non-linear nature by including multiple hidden layers with ReLU activations and sufficient hidden units. The key components of the approach include:\n",
+        "\n",
+        "1. **Model Architecture**:\n",
+        "   - A 3-layer neural network with ReLU activations is used.\n",
+        "   - The output layer produces logits, which are raw predictions used by `BCEWithLogitsLoss` for numerical stability.\n",
+        "\n",
+        "2. **Loss Function**:\n",
+        "   - `BCEWithLogitsLoss` is chosen as it combines sigmoid activation with binary cross-entropy loss, making it efficient for binary classification tasks.\n",
+        "\n",
+        "3. **Optimizer**:\n",
+        "   - The Adam optimizer is used with a learning rate of `0.01` to enable efficient training and faster convergence.\n",
+        "\n",
+        "4. **Weight Initialization**:\n",
+        "   - Xavier uniform initialization is applied to improve weight scaling, particularly with ReLU activations.\n",
+        "\n",
+        "5. **Training and Evaluation**:\n",
+        "   - During training, the model computes logits, calculates loss, and updates weights using backpropagation.\n",
+        "   - In evaluation mode, test predictions are generated, and the test loss and accuracy are reported.\n",
+        "\n",
+        "6. **Key Hyperparameters**:\n",
+        "   - The model is trained for `1500` epochs, and results are printed every `100` epochs.\n",
+        "\n",
+        "This approach ensures robust training and testing, resulting in high accuracy for binary classification tasks on the `make_circles` dataset.\n"
+      ],
+      "metadata": {
+        "id": "9t-W3W0GDNMk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the neural network model for binary classification\n",
+        "class CircleModeV2(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        # Input layer to the first hidden layer (2 input features, 64 hidden units)\n",
+        "        self.layer_1 = nn.Linear(2, 64)\n",
+        "        self.relu_1 = nn.ReLU()  # Apply ReLU activation for non-linearity\n",
+        "\n",
+        "        # Second hidden layer (64 hidden units)\n",
+        "        self.layer_2 = nn.Linear(64, 64)\n",
+        "        self.relu_2 = nn.ReLU()  # Apply ReLU activation for non-linearity\n",
+        "\n",
+        "        # Output layer (1 unit for binary classification logits)\n",
+        "        self.layer_3 = nn.Linear(64, 1)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Pass the input through the layers with activations\n",
+        "        x = self.relu_1(self.layer_1(x))\n",
+        "        x = self.relu_2(self.layer_2(x))\n",
+        "        return self.layer_3(x)  # Return raw logits for use with BCEWithLogitsLoss\n"
+      ],
+      "metadata": {
+        "id": "Uty2DLZpCXfX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Instantiate the model and move it to the appropriate device (GPU)\n",
+        "model_3a = CircleModeV2().to(device)\n",
+        "\n",
+        "# Ensure training and testing data are also on the same device\n",
+        "X_train, y_train = X_train.to(device), y_train.to(device)\n",
+        "X_test, y_test = X_test.to(device), y_test.to(device)\n"
+      ],
+      "metadata": {
+        "id": "WSh6ijBWCf_w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(torch.unique(y_train))  # Should output: tensor([0, 1])\n"
+      ],
+      "metadata": {
+        "id": "SqZli1FuACwT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Setup"
+      ],
+      "metadata": {
+        "id": "sP8mlLI3yOnN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ☠ Beware!\n",
+        "\n",
+        "of a a mismatch in the shapes of `y_logits` and `y_train`. The `BCEWithLogitsLoss` function requires the shapes of both the logits (`y_logits`) and targets (`y_train`) to match exactly.\n",
+        "\n",
+        "In our code, `y_logits` has the shape [800], while `y_train` has the shape [800, 1]."
+      ],
+      "metadata": {
+        "id": "p8Wpk_JN1_9W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Reinitialize Weights"
+      ],
+      "metadata": {
+        "id": "XZqSr_JRA2M6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to initialize weights for the linear layers\n",
+        "def initialize_weights(m):\n",
+        "    if isinstance(m, nn.Linear):\n",
+        "        # Xavier initialization for weights (good for layers with ReLU activations)\n",
+        "        nn.init.xavier_uniform_(m.weight)\n",
+        "        # Set biases to zero\n",
+        "        nn.init.zeros_(m.bias)\n",
+        "\n",
+        "# Apply the weight initialization to all layers of the model\n",
+        "model_3a.apply(initialize_weights)\n"
+      ],
+      "metadata": {
+        "id": "KKbfNfa0C38i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the Binary Cross-Entropy Loss with Logits\n",
+        "# This loss function is designed for binary classification and expects raw logits\n",
+        "loss_fn = nn.BCEWithLogitsLoss()\n",
+        "\n",
+        "# Use the Adam optimizer with a learning rate of 0.01 for efficient training\n",
+        "# Adam dynamically adjusts learning rates for each parameter\n",
+        "optimizer = torch.optim.Adam(params=model_3a.parameters(), lr=0.01)\n"
+      ],
+      "metadata": {
+        "id": "b5bc1X0WCpcT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set manual seeds for reproducibility\n",
+        "torch.manual_seed(42)\n",
+        "torch.cuda.manual_seed(42)\n",
+        "\n",
+        "# Define the number of epochs for training\n",
+        "epochs = 1500\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "    # Set the model to training mode\n",
+        "    model_3a.train()\n",
+        "\n",
+        "    # Perform a forward pass to calculate logits\n",
+        "    y_logits = model_3a(X_train).squeeze()  # Squeeze to ensure dimensions match\n",
+        "\n",
+        "    # Calculate the loss using BCEWithLogitsLoss\n",
+        "    loss = loss_fn(y_logits, y_train.squeeze())\n",
+        "\n",
+        "    # Zero gradients to prevent accumulation\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    # Backpropagate the loss to compute gradients\n",
+        "    loss.backward()\n",
+        "\n",
+        "    # Update model weights using the optimizer\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    # Set the model to evaluation mode for testing\n",
+        "    model_3a.eval()\n",
+        "    with torch.no_grad():  # Disable gradient computation for efficiency\n",
+        "        # Forward pass for the test data\n",
+        "        test_logits = model_3a(X_test).squeeze()  # Logits for test data\n",
+        "\n",
+        "        # Calculate test loss\n",
+        "        test_loss = loss_fn(test_logits, y_test.squeeze())\n",
+        "\n",
+        "        # Convert logits to probabilities and round to binary predictions\n",
+        "        test_pred = torch.round(torch.sigmoid(test_logits))\n",
+        "\n",
+        "        # Calculate test accuracy\n",
+        "        test_acc = (test_pred == y_test.squeeze()).float().mean().item() * 100\n",
+        "\n",
+        "    # Print results every 100 epochs\n",
+        "    if epoch % 100 == 0:\n",
+        "        print(f\"Epoch {epoch}: Loss = {loss:.4f}, Test Loss = {test_loss:.4f}, Test Acc = {test_acc:.2f}%\")\n"
+      ],
+      "metadata": {
+        "id": "ebXr4foLDCkc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_3a.eval()\n",
+        "with torch.inference_mode():\n",
+        "    y_preds = torch.round(torch.sigmoid(model_3a(X_test))).squeeze()\n",
+        "y_preds[:10], y_test[:10]"
+      ],
+      "metadata": {
+        "id": "f1IPQfm-vIrb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# plot decision Boundaries\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.title(\"Train\")\n",
+        "plot_decision_boundary(model_3a, X_train, y_train)\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.title(\"Test\")\n",
+        "plot_decision_boundary(model_3a, X_test, y_test)"
+      ],
+      "metadata": {
+        "id": "_2_NK5mT3Ur7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Here we have successfully isolated the red from the blue circles"
+      ],
+      "metadata": {
+        "id": "5tF9z0osEU0A"
       }
     },
     {
@@ -2547,6 +2802,7 @@
         "| **Precision**            | $ \\text{Precision} = \\frac{\\text{TP}}{\\text{TP} + \\text{FP}} $          | `precision = tp / (tp + fp + 1e-10)`                                                                                | Use when minimizing false positives is important (e.g., spam detection).        |\n",
         "| **Recall**               | $ \\text{Recall} = \\frac{\\text{TP}}{\\text{TP} + \\text{FN}} $             | `recall = tp / (tp + fn + 1e-10)`                                                                                  | Use when minimizing false negatives is important (e.g., disease diagnosis).     |\n",
         "| **F1-Score**             | $ \\text{F1} = 2 \\cdot \\frac{\\text{Precision} \\cdot \\text{Recall}}{\\text{Precision} + \\text{Recall}} $ | `f1 = 2 * (precision * recall) / (precision + recall + 1e-10)`                                                     | Use when balancing precision and recall is important.                           |\n",
+        "| **Accuracy**             | $ \\text{Accuracy} = \\frac{\\text{TP} + \\text{TN}}{\\text{TP} + \\text{TN} + \\text{FP} + \\text{FN}} $ | `accuracy = torchmetrics.Accuracy()(predictions, targets)` <br>`# OR` <br>`accuracy = (tp + tn) / (tp + tn + fp + fn + 1e-10)`                           | Use when evaluating overall correctness of predictions.                         |\n",
         "| **Confusion Matrix**     | N/A                                                                       | `conf_matrix = torch.zeros(num_classes, num_classes)` <br>`for t, p in zip(targets, predictions): conf_matrix[t.long(), p.long()] += 1`                  | Use for a detailed view of model performance for each class.                    |\n",
         "| **Classification Report**| N/A                                                                       | `from sklearn.metrics import classification_report` <br>`report = classification_report(y_true, y_pred, target_names=class_names)`                      | Use for a comprehensive summary of precision, recall, F1-score, and support.    |\n",
         "\n",
@@ -2558,17 +2814,121 @@
         "3. **FN (False Negatives)**: Positive samples incorrectly predicted as negative.\n",
         "4. **TN (True Negatives)**: Correctly predicted negative samples.\n",
         "5. **num_classes**: Total number of classes in the classification task.\n",
-        "6. **1e-10**: Small value added to avoid division by zero.\n"
+        "6. **1e-10**: Small value added *to avoid division by zero.*\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Precision-Recall Relationship\n",
+        "\n",
+        "### Precision and Recall:\n",
+        "- **Precision** focuses on the proportion of correct positive predictions out of all positive predictions made by the model.\n",
+        "- **Recall** focuses on the proportion of actual positive samples that were correctly identified by the model.\n",
+        "\n",
+        "### When to Use:\n",
+        "- **High Precision, Low Recall**: Use when false positives are costly (e.g., spam detection).\n",
+        "- **High Recall, Low Precision**: Use when false negatives are costly (e.g., disease diagnosis).\n",
+        "- **F1-Score**: Use to balance precision and recall when both are critical.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Example Usage in PyTorch\n",
+        "\n",
+        "```python\n",
+        "import torch\n",
+        "import torchmetrics\n",
+        "\n",
+        "# Example inputs\n",
+        "targets = torch.tensor([1, 0, 1, 1, 0, 1])\n",
+        "predictions = torch.tensor([1, 0, 1, 0, 0, 1])\n",
+        "\n",
+        "# True positives, false positives, false negatives, true negatives\n",
+        "tp = torch.sum((predictions == 1) & (targets == 1))\n",
+        "fp = torch.sum((predictions == 1) & (targets == 0))\n",
+        "fn = torch.sum((predictions == 0) & (targets == 1))\n",
+        "tn = torch.sum((predictions == 0) & (targets == 0))\n",
+        "\n",
+        "# Precision\n",
+        "precision = tp / (tp + fp + 1e-10)\n",
+        "\n",
+        "# Recall\n",
+        "recall = tp / (tp + fn + 1e-10)\n",
+        "\n",
+        "# F1-Score\n",
+        "f1 = 2 * (precision * recall) / (precision + recall + 1e-10)\n",
+        "\n",
+        "# Accuracy (TorchMetrics)\n",
+        "accuracy_metric = torchmetrics.Accuracy()\n",
+        "accuracy = accuracy_metric(predictions, targets)\n",
+        "\n",
+        "# Confusion Matrix\n",
+        "num_classes = 2\n",
+        "conf_matrix = torch.zeros(num_classes, num_classes)\n",
+        "for t, p in zip(targets, predictions):\n",
+        "    conf_matrix[t.long(), p.long()] += 1\n",
+        "\n",
+        "# Print results\n",
+        "print(f\"Precision: {precision.item():.4f}\")\n",
+        "print(f\"Recall: {recall.item():.4f}\")\n",
+        "print(f\"F1-Score: {f1.item():.4f}\")\n",
+        "print(f\"Accuracy: {accuracy.item():.4f}\")\n",
+        "print(f\"Confusion Matrix:\\n{conf_matrix}\")\n",
+        "\n",
+        "\n",
+        "**If you want access to a lot of PyTorch metrics, see pages like (i.e. for accuracy: https://pytorch.org/ignite/generated/ignite.metrics.Accuracy.html"
       ],
       "metadata": {
-        "id": "E2cnhqLiHi5z"
+        "id": "K4K-B_ImNlAT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![Alt Text](https://bit.ly/42h5KMI)\n"
+      ],
+      "metadata": {
+        "id": "RE0lcqUcJLd-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install torchmetrics"
+      ],
+      "metadata": {
+        "id": "4Uzhw_uTFeq8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchmetrics import Accuracy\n",
+        "\n",
+        "# Setup metric, specifying the task as 'multiclass' and num_classes\n",
+        "torchmetric_accuracy = Accuracy(task=\"multiclass\", num_classes=4).to(device) # NUM_CLASSES should be defined previously\n",
+        "\n",
+        "# Calculate accuracy\n",
+        "torchmetric_accuracy(y_preds, y_blob_test)"
+      ],
+      "metadata": {
+        "id": "ebW7sqUQWk3t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "wdig7ZhFWiqb"
       }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4Uzhw_uTFeq8"
+        "id": "0wVQPfVAWOZk"
       },
       "execution_count": null,
       "outputs": []
