--- a/Copy_of_PyTorch_Classification.ipynb
+++ b/Copy_of_PyTorch_Classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyP5bs7xVNgojkPSWKxxk29A",
+      "authorship_tag": "ABX9TyMgnOy7EzbXD2WtxwyejM3u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2919,16 +2919,116 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# Exercises"
+      ],
       "metadata": {
         "id": "wdig7ZhFWiqb"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "\n",
+        "# Setup device agnostic code\n",
+        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "device"
+      ],
+      "metadata": {
+        "id": "KgQovILBbRBH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setup random seed\n",
+        "RANDOM_SEED = 42"
+      ],
       "metadata": {
         "id": "0wVQPfVAWOZk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a dataset with Scikit-Learn's make_moons()\n",
+        "import sklearn\n",
+        "from sklearn.datasets import make_moons\n",
+        "# Make 1000 circles\n",
+        "n_samples = 1000\n",
+        "\n",
+        "# Create circles\n",
+        "X, y = make_circles(n_samples,\n",
+        "                    noise = 0.05,\n",
+        "                    random_state=42)\n"
+      ],
+      "metadata": {
+        "id": "qyD9j_Y6cVDL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Turn data into a DataFrame\n",
+        "import pandas as pd\n",
+        "circles = pd.DataFrame({'X1': X[:, 0],\n",
+        "                        'X2': X[:, 1],\n",
+        "                        'label': y})\n",
+        "circles.head()"
+      ],
+      "metadata": {
+        "id": "ooTpOUxtcncC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.scatter(x=X[:, 0],\n",
+        "            y=X[:, 1],\n",
+        "            c=y,\n",
+        "            cmap=plt.cm.RdYlBu);"
+      ],
+      "metadata": {
+        "id": "60Ixao1kdEZD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Turn data into tensors of dtype float\n",
+        "X = torch.from_numpy(X).type(torch.float)\n",
+        "y = torch.from_numpy(y).type(torch.float)"
+      ],
+      "metadata": {
+        "id": "E2j13Y5md7VS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split the data into train and test sets(80% train, 20% test)\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X,\n",
+        "                                                    y,\n",
+        "                                                    test_size=0.2,\n",
+        "                                                    random_state=42)"
+      ],
+      "metadata": {
+        "id": "1BoZ7yxbedm3"
       },
       "execution_count": null,
       "outputs": []
